# hootenanny

./: .env_versions  .gitignore  .gitmodules  .gitmodules.rej  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  Configure.pri.in  Docker.md  DockerBuild.sh  DockerBuildHootCore.sh  DockerBuildHootCore.txt  DockerBuild_HootCore.txt  Gemfile  HOOT_VERSION_GEN  Hootenanny.pro  Hootenanny_Joint_Intellij_Eclipse_Java_Formatter.xml  INSTALL  INSTALL-CentOS6.5-PG9.1.txt  INSTALL-CentOS6.5-PG9.1.txt.rej  KnownIssues  LICENSE  LicenseTemplate (orig).txt  LocalConfig.pri.orig  Makefile  Makefile.am  Makefile.docker  Makefile.hoot  Makefile.inc.in  Makefile.old  Makefile.old.rej  NEWS  OAUTH.md  README  README.md  RebuildServices  SetupEnv.sh  VAGRANT.md  (+30 more)
.circleci/: config.yml
conf/: BuildingModel.arff.bz2  BuildingModel.sha1sum  Config.sh  ConfigOptions.asciidoc  DatabaseConfig.sh  DatabaseConfig.sh.orig  DefaultTranslations.json  HighwayModel.arff.bz2  HighwayModel.sha1sum  LinearWaterway.conf  LocalConfig.sh.orig  LocalHoot.json.in  Network.conf  NoRubberSheet.json  Places.json  PoiModel.arff.bz2  PoiModel.sha1sum  README  ReligionSchema.json  RemoveReview2.conf  RubberSheet.json  ServerConfig.sh  Snap.json  TdsExport.json  UuidSchema.json  World_Country_AdminBoundary_DrivingDirection.dbf  World_Country_AdminBoundary_DrivingDirection.sbn  World_Country_AdminBoundary_DrivingDirection.sbx  conflateAdvOps.json  conflationAverageOps.json  conflationHorizontalOps.json  conflationRefOps.json  dictionary.json  hoot.json  stxxl.conf
distribution/: README  pom.xml
docker/: Dockerfile  Dockerfile.core-services  Dockerfile.frontend  Dockerfile.postgres
docs/: AtomToAsciiDoc.xslt  ConfToAsciiDoc.js  Core-C++.dox  CoreAPI.dox  DoxygenToAsciiDoc.xslt  GenerateSchemaGraphImage.sh  GenerateSchemaOsmPlusTable.sh  GrabGantt.js  HootJavaScriptInterfaces.asciidoc  HootReference.asciidoc  HootenannyAlgorithms.asciidoc  HootenannyConfigOptions.asciidoc  HootenannyDeveloperGuide.asciidoc  HootenannyInstallDocs.asciidoc  HootenannyInstallDocs_Centos.asciidoc  HootenannyUI.asciidoc  HootenannyUserGuide.asciidoc  HootenannyWebArchitecture.asciidoc  JavascriptOverview.asciidoc  Makefile  ParseAtom.js  ParseRevisions.js  README  Redistribution.md  References.asciidoc  RulesLib.dox  RulesTemplate.dox  WadlToAsciiDoc.xslt  WordHtmlToAsciiDoc.xslt  WpsToAsciiDoc.xslt  docinfo.xml  docs.pro  package-lock.json  schema.asciidoc  word2asciidoc
hoot-cmd/: README  hoot-cmd.pro
hoot-core/: README  hoot-core.pro  protobuf.pri
hoot-core-test/: README  hoot-core-test.pro  hoot-core-test.pro.orig
hoot-hadoop/: README.txt  hoot-hadoop.pro
hoot-josm/: Makefile  README  hoot-josm.pro  make-hoot-josm-java.sh  pom.xml
hoot-js/: README  README.txt  hoot-js.pro
hoot-rnd/: README  hoot-rnd.pro
hoot-services/: .factorypath  .gitignore  CONTRIBUTING.md  DEBUG.md  Makefile  QSpringSessionAttributes.java  README  SpringSessionAttributes.java  db.properties.in  findbugs-exclude.xml  pmd-custom-rules.xml  pom.xml  pom.xml.in
hoot-swig/: README.txt  hoot-swig.pro  pom.xml
hoot-test/: README  hoot-test.pro
hoot-translate/: index.html
m4/: README  ax_lib_gdal.m4  ax_lib_hadoop.m4  boost.m4  coverage.m4  cppunit.m4  geos.m4  glpk.m4  graphviz.m4  jni.m4  josm.m4  libaddressinput.m4  liboauthcpp.m4  libphonenumber.m4  libpostal.m4  libpq.m4  libpqxx.m4  log4cxx.m4  newmat.m4  nodejs.m4  octave.m4  precision.m4  python.m4  rnd.m4  ruby.m4  services.m4  stxxl.m4  ui-tests.m4  ui.m4  version.m4
mapedit-export-server/: README.md  config.json  package.json  server.js
node-export-server/: .gitignore  README.md  config.json  package-lock.json  package.json  server.js
node-mapnik-server/: .gitignore  README.md  app.js  hoot_style.xml  hoot_style_template.xml  package.json
patches/: geos-3.4.2-centos6.7.patch
plugins/: .gitignore  BadSyntaxTest.js  ElementMergeServer.MD  ElementMergeServer.js  MassNh.js  P2PServer.MD  P2PServer.js  SchemaTools.js  TranslationServer.MD  TranslationServer.js  UseByHootUI.MD  config.js  dnc.js  dnc_rules.js  dnc_schema.js  eggdm30.js  eggdm30_osm.js  eggdm30_osm_rules.js  eggdm30_rules.js  emgcp.js  emgcp_osm.js  emgcp_osm_rules.js  emgcp_rules.js  etds.js  etds40.js  etds40_osm.js  etds40_osm_rules.js  etds40_rules.js  etds61.js  etds61_osm.js  etds61_osm_rules.js  etds61_rules.js  etds_osm.js  example.js  facc_groups.json  facc_subgroups.json  fcode_common.js  geonames.js  geonames_rules.js  ggdm30.js  (+22 more)
plugins-local/: HGISv20.js  MassNh_rules.js  dnc.js  dnc_rules.js  facc.js  facc_rules.js  hgis20.js  hgis20_rules.js  hgis20_schema.js  navteq.js  navteq_rules.js  tomnod.js  tomnod_rules.js  ufd.js  ufd_rules.js  utp.js  utp_rules.js  wikimapia.js  wikimapia_rules.js
pretty-pipes/: NOTICE.txt  README.txt
project-archive/: README
python/: CommandsAcrossContainer.py
renderdb-export-server/: README.md  config.json  package.json  server.js
report/: cleanReference.sh  cleanReport.sh  csr-default.js  csr-reference.js  makeReference.sh  makeReport.sh  reference.asciidoc  report.asciidoc  reportStyle.sty
reports/: README.txt
rules/: AdminBoundary.js  Area.js  CollectionRelation.js  Line.js  LineStringGeneric.js  LineStringGenericTest.js  LineTest.js  LinearWaterway.js  MultiaryPoi.js  MultiaryPoiGeneric.js  MultiaryPoiGenericRules.js  MultiaryPoiRules.js  Poi.js  PoiGeneric-develop.js  PoiGeneric.js  Point.js  PointGeneric.js  PointPolygon.js  PointPolygon.js.off  Polygon.js  PolygonBuilding.js  PolygonBuildingTest.js  PolygonGeneric.js  PowerLine.js  README  Railway.js  Relation.js  River.js
scripts/: AWSProvision_CentOS_RHEL_6_5.sh  AWSProvision_CentOS_RHEL_7.sh  CheckScores.py  CheckThreeScores.py  CleanAndInitializeOsmApiDb.sh  CleanAndLoadOsmApiDbData.sh  CleanOsmApiDB.sh  CleanOsmApiDB_custom.sh  ConflateExample.js  ConvertGGDMv30Schema.py  ConvertMGCPSchema.py  ConvertMGCPSchema_XML.py  ConvertTDSv40English.py  ConvertTDSv40Schema.py  ConvertTDSv61Schema.py  CopyWebAppsToTomcat.sh  CountFeatureTypes.js  CoverHootUI.sh  CreateConfigCode.py  HootEnv.sh  (+113 more)
(+12744 files in other folders)
